intro text added

--- a/assets/css/scheduler.css
+++ b/assets/css/scheduler.css
@@ -2,6 +2,8 @@
     margin-top: 25px;
     border: solid 1px #007bff;
     color: #007bff;
+    line-height: 10px;
+    text-align: center;
 }
 
 table {
